style: add more color veriables and styles for second section

--- a/style.css
+++ b/style.css
@@ -9,8 +9,14 @@
     font-size: 62.5%;
     --resultado-bg: linear-gradient(180deg, #75F 0%, #6943FF 0.01%, #2F2CE9 100%);
     --media-bg: linear-gradient(180deg, #4D21C9 0%, rgba(37, 33, 201, 0.00) 100%, rgba(37, 33, 201, 0.00) 100%);
+    --resumo-div-bg: linear-gradient(0deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0.95) 100%);
+    --reacao-bg:#FF5555;
+    --memoria: #FFB21E;
+    --verbal:#00BB8F;
+    --visual:#1125D6;
     --white: #fff;
     --light-blue: #CAC9FF;
+    --dark-navy: #303B59;
 }
 
 body{
@@ -67,4 +73,54 @@ body{
     max-width: 26em;
     margin-inline: auto;
     color: var(--light-blue);
+}
+
+.resumo{
+    padding: 2.4rem 3.2rem;
+
+}
+
+.resumo h2{
+    font-size: 1.8rem;
+    color: var(--dark-navy);
+    margin-bottom: 2.5rem;
+}
+
+.resumo > div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1.6rem;
+    border-radius: 1.2rem;
+    margin-bottom: 1.6rem;
+}
+
+.resumo > div div{
+    display: flex;
+    align-items: center;
+    gap: 1.2rem;
+}
+
+.reacao{
+    background: var(--reacao-bg) var(--resumo-div-bg);
+    color: var(--reacao-bg);
+}
+
+.memoria{
+    background: var(--memoria) var(--resumo-div-bg);
+    color: var(--memoria);
+}
+
+.verbal{
+    background: var(--verbal) var(--resumo-div-bg);
+    color: var(--verbal);
+}
+
+.visual{
+    background: var(--visual) var(--resumo-div-bg);
+    color: var(--visual);
+}
+
+.resumo > div strong{
+    font-weight: 800;
 }
