--- a/style.css
+++ b/style.css
@@ -17,10 +17,12 @@
     --white: #fff;
     --light-blue: #CAC9FF;
     --dark-navy: #303B59;
+    --very-ligth-blue: #ECF2FF;
 }
 
 body{
    font-size: 1.6rem;
+   background: var(--very-ligth-blue);
 }
 
 /*1rem = 16px*/
@@ -70,14 +72,14 @@ body{
 }
 
 .resultado p{
-    max-width: 26em;
+    max-width: 26rem;
     margin-inline: auto;
     color: var(--light-blue);
 }
 
 .resumo{
     padding: 2.4rem 3.2rem;
-
+    background: var(--white);
 }
 
 .resumo h2{
@@ -143,4 +145,61 @@ body{
     color: var(--white);
     font-size: 1.8rem;
     font-weight: 700;
+}
+
+@media (min-width: 736px){
+    body{
+        min-height: 100svh;
+        display: flex;
+        justify-content: center;
+        align-items: center
+    }
+    main{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        width: 736px;
+        background: var(--white);
+        border-radius: 3.2rem 0 0 3.2rem;
+    }
+
+    .resultado{
+        padding-block: 3.8rem;
+        border-radius: 3.2rem;
+    }
+
+
+    .resultado h1{
+        font-size: 2.4rem;
+        margin-bottom: 3.6rem;
+    }
+
+    .resultado div{
+        width: 20rem;
+        height: 20rem;
+        margin-bottom: 2.8rem;
+    }
+    
+    .resultado div strong:nth-of-type(1) {
+        font-size: 7.2rem;
+    }
+    .resultado div strong:nth-of-type(2) {
+        font-size: 1.8rem;
+    }
+
+    .resultado h2{
+        font-size: 3.2rem;
+        margin-bottom: 1.6rem;
+    }
+    .resultado p{
+        font-size: 1.8rem;
+    }
+
+    .resumo{
+        padding:  3.8rem 4rem ;
+    }
+
+    .resumo h2{
+        font-size: 2.4rem;
+        margin-bottom: 3rem;
+    }
 }
